09/m09a01vehicles2-handout/grading/2023-11-06-11-38-46/compile.err
Vehicle.java:20: error: class Minivan is public, should be declared in a file named Minivan.java
public class Minivan extends Vehicle {
       ^
Vehicle.java:34: error: class Truck is public, should be declared in a file named Truck.java
public class Truck extends Vehicle {
       ^
2 errors
